--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,8 @@ body {
   font-size: 1.8rem;
   font-weight: bold;
   color: #1a1a1a;
-  margin-left: 20px;
+  margin-right: 1000 px;
+  display: flex;
 }
 
 .header-links {
@@ -67,4 +68,66 @@ body {
 
 .sign-up:hover {
   background-color: #218838;
+}
+
+.product {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #fff;
+  padding: 60px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin-top: 20px;
+}
+
+.product-description {
+  max-width: 50%;
+}
+
+.product-title {
+  font-size: 3rem;
+  font-weight: bold;
+  margin-bottom: 20px;
+  color: #1a1a1a;
+}
+
+.product-text {
+  font-size: 1.2rem;
+  margin-bottom: 30px;
+  color: #555;
+}
+
+.product-btns {
+  display: flex;
+  gap: 15px;
+}
+
+.primary-btn {
+  background-color: #007bff;
+  color: #fff;
+  padding: 12px 25px;
+  font-weight: bold;
+  border: none;
+}
+
+.primary-btn:hover {
+  background-color: #0056b3;
+}
+
+.secondary-btn {
+  background-color: transparent;
+  color: #007bff;
+  padding: 12px 25px;
+  border: 2px solid #007bff;
+  font-weight: bold;
+}
+
+.secondary-btn:hover {
+  background-color: #007bff;
+  color: #fff;
+}
+
+.product-img {
+  max-width: 100%;
+  height: auto;
 }
