--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ body {
   font-weight: bold;
   color: #1a1a1a;
   margin-left: 100 px;
-  display: inline-flex;
+  display: flex;
 }
 
 .header-links {
