--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body {
   padding: 20px 40px;
   background-color: #ffffff;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
-  font-family: Arial, sans-serif;
+  font-family: "Montserrat", serif;
   position: sticky;
   top: 0;
   z-index: 1000;
