--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,8 @@ body {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   font-family: "Montserrat", serif;
   position: sticky;
+  top: 0;
+  z-index: 1000;
 }
 
 .header-logo {
