--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,6 @@ body {
 }
 
 .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   padding: 10px 40px;
   background-color: #ffffff;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
@@ -24,6 +21,11 @@ body {
   position: sticky;
   top: 0;
   z-index: 1000;
+}
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .header-logo {
