--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@ body {
   background-color: #f7f9fc;
   color: #333;
   line-height: 1.6;
+  justify-content: center;
+  align-items: center;
 }
 
 .container {
@@ -287,4 +289,125 @@ body {
   width: 20px;
   height: 20px;
   margin-right: 10px;
+}
+
+.process {
+  display: grid;
+  text-align: center;
+  background: #fff;
+  padding: 50px 20px;
+  border-radius: 10px;
+  max-width: 1200px;
+  margin: 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.process h2 {
+  font-size: 2.5rem;
+  color: #333;
+  margin-bottom: 10px;
+}
+
+.process-description {
+  color: #555;
+  font-size: 1.1rem;
+  margin-bottom: 40px;
+  max-width: 700px;
+  margin: 0 auto 40px;
+}
+
+.process-cards {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 40px;
+  justify-content: space-between;
+}
+.left {
+  justify-content: left;
+}
+
+.right {
+  justify-content: right;
+}
+
+.process-item {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.process-img {
+  width: 150px;
+  height: 100px;
+  border-radius: 100%;
+  overflow: hidden;
+  border: 5px solid transparent;
+  display: flex;
+  align-items: center;
+}
+
+.process-img img {
+  width: 100%;
+  height: 150%;
+  object-fit: cover;
+}
+
+.red-border {
+  border-color: #ff3b3b;
+}
+.green-border {
+  border-color: #00d084;
+}
+.purple-border {
+  border-color: #a64db6;
+}
+.blue-border {
+  border-color: #3d87e4;
+}
+
+.process-text {
+  white-space: nowrap;
+  background-color: #f3f4f6;
+  color: #333;
+  border-radius: 20px;
+  padding: 12px 20px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  font-size: 1rem;
+  max-width: 200px;
+  text-align: center;
+}
+
+.process-text::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: -10px;
+  transform: translateY(-50%);
+  width: 0;
+  height: 0;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+  border-right: 10px solid #f3f4f6;
+}
+
+.process-button {
+  transform: translate(-50%, -50%);
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  background: #00b894;
+  color: white;
+  border: none;
+  padding: 12px 25px;
+  border-radius: 5px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+
+.process-button:hover {
+  background: #019870;
 }
