--- a/css/style.css
+++ b/css/style.css
@@ -292,6 +292,8 @@ body {
 }
 
 .process {
+  justify-content: center;
+  align-items: center;
   display: grid;
   text-align: center;
   background: #fff;
@@ -320,7 +322,8 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 40px;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
 }
 .left {
   justify-content: left;
@@ -396,8 +399,9 @@ body {
 
   justify-content: center;
   align-items: center;
-  margin-left: auto;
-  margin-right: auto;
+  margin-top: 120px;
+  margin-left: 230px;
+
   background: #00b894;
   color: white;
   border: none;
