--- a/css/style.css
+++ b/css/style.css
@@ -428,8 +428,12 @@ body {
 }
 
 .strategies h2 {
+  text-align: left;
   font-size: 2.5rem;
   margin-bottom: 10px;
+}
+.strategies-p {
+  text-align: left;
 }
 
 .strategies p {
