--- a/css/style.css
+++ b/css/style.css
@@ -504,7 +504,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 10vh;
+  height: 400px;
 }
 
 .price-container {
