--- a/css/style.css
+++ b/css/style.css
@@ -717,7 +717,7 @@ body {
 }
 
 .banner-img img {
-  width: 80px;
+  width: 100%;
   height: auto;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
