--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-
   background-color: #f4f4f4;
 }
 
@@ -78,7 +77,7 @@ body {
 }
 
 .sign-up:hover {
-  background-color: #22daa9;
+  background-color: #0c775a;
 }
 
 .product {
@@ -153,7 +152,6 @@ body {
   margin: 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   min-height: 50vh;
-
   background-color: #f9f9f9;
 }
 
@@ -609,6 +607,7 @@ body {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   background-color: #f4f7fa;
   display: flex;
+
   flex-direction: column;
   align-items: center;
 }
@@ -623,8 +622,8 @@ body {
   display: inline-block;
   background-color: #f4f4f4;
   border: 1px solid #ddd;
-  border-radius: 8px;
-  padding: 20px;
+  border-radius: 10px;
+  padding: 30px;
   max-width: 300px;
   text-align: left;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -637,7 +636,6 @@ body {
 }
 .commentator-avatar {
   display: flex;
-
   text-align: left;
   align-items: center;
   gap: 5px;
@@ -651,7 +649,6 @@ body {
 .commentator-name {
   display: flex;
   flex-direction: column-reverse;
-  display: flex;
 }
 .commentator-avatar h4 {
   color: #006d5b;
@@ -664,6 +661,7 @@ body {
   margin: 0;
 }
 .stars {
+  display: flex;
   color: yellow;
   font-size: 1.5em;
 }
@@ -675,12 +673,12 @@ body {
   justify-content: center;
   align-items: center;
   background-color: #009688;
+  margin-top: 80px;
   margin-left: 269px;
-  border-radius: 10px;
-  padding: 20px 30px;
+  border-radius: 30px;
+  padding: 30px 30px;
   width: 80%;
   max-width: 900px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   color: #fff;
   text-align: left;
 }
@@ -690,7 +688,7 @@ body {
 }
 
 .banner-content h1 {
-  font-size: 24px;
+  font-size: 30px;
   line-height: 1.5;
   margin: 0 0 15px;
 }
@@ -703,7 +701,7 @@ body {
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
-  transition: background-color 0.3s ease, color 0.3s ease;
+  transition: transform 0.9s;
 }
 
 .banner-button:hover {
@@ -721,4 +719,109 @@ body {
   height: auto;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+footer {
+  background-color: #f9f9f9;
+  padding: 40px 20px;
+  font-family: Arial, sans-serif;
+  justify-content: center;
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.footer-logo {
+  margin-left: 251px;
+  min-width: 200px;
+}
+
+.footer-logo h2 {
+  text-decoration: none;
+  color: #062d5b;
+  margin-bottom: 10px;
+}
+.footer-logo-img {
+  display: flex;
+}
+
+.social-icons a {
+  margin-right: 10px;
+}
+
+.social-icons img {
+  width: 24px;
+  height: 24px;
+}
+
+.footer-links {
+  display: flex;
+
+  gap: 129px;
+  justify-content: space-between;
+  min-width: 200px;
+}
+
+.footer-links h3 {
+  margin-bottom: 10px;
+  color: #062d5b;
+}
+
+.footer-links ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-links ul li {
+  margin-bottom: 5px;
+}
+
+.footer-links ul li a {
+  text-decoration: none;
+  color: #333;
+}
+
+.footer-links ul li a:hover {
+  text-decoration: underline;
+}
+
+.footer-subscription {
+  min-width: 100px;
+  margin-right: 200px;
+}
+
+.footer-subscription p {
+  margin-bottom: 10px;
+}
+
+.footer-subscription form {
+  display: flex;
+  gap: 10px;
+}
+
+.footer-subscription input {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.footer-subscription button {
+  background-color: #019870;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.footer-subscription button:hover {
+  background-color: #0c775a;
+}
+
+.footer-bottom {
+  text-align: center;
+  margin-top: 20px;
+  font-size: 14px;
+  color: #777;
 }
