--- a/css/style.css
+++ b/css/style.css
@@ -344,7 +344,7 @@ body {
 }
 
 .process-img {
-  width: 150px;
+  width: 100px;
   height: 100px;
   border-radius: 100%;
   overflow: hidden;
@@ -515,7 +515,7 @@ body {
 
 .price-container {
   gap: 20px;
-  max-width: 1200px;
+
   text-align: center;
   justify-content: center;
 }
@@ -538,7 +538,7 @@ body {
 
 .price-cards {
   display: inline-block;
-  gap: 20px;
+  margin-right: 70px;
   flex-wrap: wrap;
 
   background: #fff;
@@ -553,6 +553,9 @@ body {
 .price-cards:hover {
   background: #006d5b;
   color: #fff;
+}
+.price-card:last-child {
+  margin-right: 0;
 }
 
 .price-cards h3 {
